Added images on angelholm page

--- a/public/templates/angelholm.html
+++ b/public/templates/angelholm.html
@@ -12,13 +12,15 @@
       <div class="col-sm-4">
         <h2>Staden Ängelholm</h2>
         <p>
-            Ängelholm som stad grundades år 1516. Centrum låg då i den norra delen av Ängelholm, i stadsdelen som kallas för Luntertun. Det var den danske kungen Kristian den II som beslutade att centrum skulle flyttas därifrån, bl.a. på grund av sandflykten vid havet, och även p.g.a. att den nya platsen för centrum var bättre ur försvarsstrategisk synpunkt. 
+            Ängelholm som stad grundades år 1516. Centrum låg då i den norra delen av Ängelholm, i stadsdelen som kallas för Luntertun. Det var den danske kungen Kristian den II som beslutade att centrum skulle flyttas därifrån, bl.a. på grund av sandflykten vid havet, och även p.g.a. att den nya platsen för centrum var bättre ur försvarsstrategisk synpunkt.
+            <img src="images/ronnea.jpg" alt="Lergöksorkestern" style="width:100%;height:100%;"> 
         </p>
       </div>
       <div class="col-sm-4">
         <h2>Lergöken</h2>
         <p>
             Ängelholm kallas Lergökastán. 
+            <img src="images/lergok.jpg" alt="Lergöksorkestern" style="width:100%;height:100%;">
         </p>
       </div>
       <div class="col-sm-4">
@@ -37,7 +39,7 @@
 	    </div>
       <div class="col-sm-4">
         <h2>Ängelholms Turistbyrå</h2>
-         <p>
+        <p>
         För mer information, besök Matildas f.d. kollegor på Ängelholms Turistbyrå, Järnvägsgatan 5A.
         </p>
         <p>
@@ -47,7 +49,10 @@ måndag- fredag 10-17<br>
 lördag  10-14
           <p>
 För att beställa en broschyr om Ängelholms turismutbud, klicka <a target="_blank" href="http://engelholm.com/turistinformation/">här</a>
-        </p>        
+        </p> 
+        <p>
+          <img src="images/turist.jpg" alt="Lergöksorkestern" style="width:100%;height:100%;"> 
+        </p>      
       </div>
     </div>
   </div> <!-- /container -->
