Updated and added images

--- a/public/templates/angelholm.html
+++ b/public/templates/angelholm.html
@@ -2,10 +2,12 @@
   <div class="container">
     <!-- Jumbotron -->
     <div class="jumbotron">
-      <h1>Turist i Ängelholm</h1>
+      <h2><b>Turist i Ängelholm</b></h2>
       <p class="lead">I år finns det en extra anledning att stanna till i Ängelholm. Staden fyller nämligen 500 år. 
       Detta uppmärksammas runt om i staden hela året. Så har man lite tid över, är det bara att passa på och bekanta sig med vår vackra stad.</p>
-      <p></p>
+      <p>
+        <img src="images/sunset.jpg" alt="Lergöksorkestern" style="width:100%;height:100%;">
+      </p>
     </div>
     <!-- Example row of columns -->
     <div class="row">
