--- a/public/templates/party.html
+++ b/public/templates/party.html
@@ -66,7 +66,7 @@ function setMarkers(map) {
     <div class="container">
         <!-- Jumbotron -->
         <div class="jumbotron">
-            <h1>Margretetorp</h1>
+            <h2><b>Margretetorp</b></h2>
             <p class="lead">Vår bröllopsfest kommer att hållas på Margretetorp Gästgifvaregård, som ligger i den norra delen av Ängelholms kommun, i närheten av Hjärnarp.       <a href="http://www.margretetorp.se">Margretetorp</a> 
             </p>
             <p>
@@ -112,10 +112,18 @@ function setMarkers(map) {
              </div>
         </div>
         <div class="row">
-            <div class="col-sm-4">
-	           <h2>Present</h2>
+          <div class="col-sm-4">
+	         <h2>Present</h2>
 	           <p>Den bästa present vi kan få är att ni vill komma och dela dagen med oss. Vill ni ge oss en gåva, tar vi tacksamt emot ett bidrag till vår bröllopsresa.
-               </p>        
+             </p>        
+            </div>
+            <div class="col-sm-4">
+              <h2>Fotohörna</h2>
+              <p>Under kvällen kommer det finnas en fotohörna där man kan stanna till och knäppa några roliga bilder till brudparets fotoalbum.
+              </p> 
+              <p>       
+                <img src="images/photocorner.jpg" alt="Fotohörna" style="width:100%;height:100%;">
+              </p>
             </div>
         </div>
     </div> <!-- /container -->
