--- a/public/templates/startpage.html
+++ b/public/templates/startpage.html
@@ -2,7 +2,7 @@
   <div class="container">
     <!-- Jumbotron -->
     <div class="jumbotron">
-      <h1>Välkomna</h1>
+      <h2><b>Välkomna</b></h2>
       <p class="lead">Varmt välkomna till hemsidan som handlar om vårt bröllop! Här kommer vi löpande att presentera matnyttig information inför den stundande dagen D.</p>
       <p></p>
     </div>
