--- a/public/templates/church.html
+++ b/public/templates/church.html
@@ -80,7 +80,7 @@
   <div class="container">
     <!-- Jumbotron -->
     <div class="jumbotron">
-      <h1>Ängelholms Kyrka</h1>
+      <h2><b>Ängelholms Kyrka</b></h2>
       <p class="lead">Ängelholms kyrka hittar ni mitt i hjärtat av staden. Den nuvarande kyrkan byggdes på 1700-talet på samma plats som kyrkan som danskarna brände ned 1565  <a target="_blank"href="https://www.svenskakyrkan.se/angelholm">Ängelholms Kyrka</a> </p>
       <p>    
             <img class="logo visible-lg" src="images/large/church_lg.jpg" alt="Church" style="width:100%;height:100%;">
