--- a/public/templates/living.html
+++ b/public/templates/living.html
@@ -77,7 +77,7 @@ function setMarkers(map) {
     <div class="container">
         <!-- Jumbotron -->
         <div class="jumbotron">
-            <h1>Boende</h1>
+            <h2><b>Boende</b></h2>
             <p class="lead">Boenden i och omkring Ängelholm finns det gott om. Nedan listar vi några av dem som vi rekommenderar. Kontakta respektive hotell för prisuppgifter.
             </p>
         </div>
