--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
         <link href="/stylesheets/bootstrap-theme.min.css" rel="stylesheet" />
         <link href="/stylesheets/font-awesome.min.css" rel="stylesheet" />
         <link href="/stylesheets/site.css" rel="stylesheet" />
+        <link href="/stylesheets/ngDialog.min.css" rel="stylesheet" />
+        <link href="/stylesheets/ngDialog-theme-default.min.css" rel="stylesheet" />
     </head>
 
     <body ng-app="brollop">
@@ -26,6 +28,7 @@
         <script src="javascripts/vendor/angular-resource.min.js"></script>
         <script src="javascripts/vendor/angular-ui-router.min.js"></script>
         <script src="javascripts/vendor/ui-bootstrap-tpls-0.13.0.min.js"></script>
+        <script src="javascripts/vendor/ngDialog.min.js"></script>
 
         <!--Load main module-->
         <script src="javascripts/app/app.js"></script>
