--- a/public/templates/angelholm.html
+++ b/public/templates/angelholm.html
@@ -21,8 +21,10 @@
       <div class="col-sm-4">
         <h2>Lergöken</h2>
         <p>
-            Ängelholm kallas Lergökastán. 
-            <img src="images/lergok.jpg" alt="Lergöksorkestern" style="width:100%;height:100%;">
+            Det finns fler jubilarer i år. Det är världens enda lergöksorkester som firar 50 år. Lergöken har kommit att bli en symbol för Ängelholm och staden kallas ofta för Lergökastán.<br>
+            <p>
+              <img src="images/lergok.jpg" alt="Lergöksorkestern" style="width:100%;height:100%;">
+            </p>
         </p>
       </div>
       <div class="col-sm-4">
