Added info about Lena

--- a/public/templates/startpage.html
+++ b/public/templates/startpage.html
@@ -22,6 +22,27 @@
         <h2>Om oss</h2>
         <p>Det har nu gått 10 år sen vi först träffade varann på den korridor som vi båda bodde på. Helt plötsligt försökte man tillbringa så mycket tid som möjligt i korridorens kök eller allrum ihopp om att den andre skulle vara där. Så nu tio år senare tyckte vi att det var dags att äntligen göra slag i saken och säga Ja till varandra i närvaro av våra vänner och bekanta</p>
        </div>
-    </div>    
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <h2>Säg omelett!</h2>
+        <p>
+        Lena Evertsson heter kvinnan som kommer att följa med oss en stor del av dagen. Lena arbetar som fotograf och kommer ansvara för att föreviga bröllopsdagen i bilder (eftersom brudgummen själv inte kan göra det, nu när han ska vara med på bilderna). Lena är smidig, snabb, duktig och jättetrevlig. Hon kommer garanterat att få alla att fastna på bild, utan att det känns obekvämt. 
+        <a target="_blank" href="http://www.ateljelena.se/">Läs mer om Lena</a> 
+        </p>
+        <br>
+        <p>
+        PS. även om Lena fotar, är vi jätteglada och tacksamma om ni också gör det. Och dela gärna med er av era bilder! =) 
+        </p>
+      </div>
+      <div class="col-sm-4">
+        <h2></h2>
+        <p>
+      </div>
+      <div class="col-sm-4">
+        <h2></h2>
+        <p></p>
+       </div>
+    </div>        
   </div> <!-- /container -->
 </div>
