Added image of lena

--- a/public/templates/startpage.html
+++ b/public/templates/startpage.html
@@ -27,7 +27,10 @@
       <div class="col-sm-4">
         <h2>Säg omelett!</h2>
         <p>
-        Lena Evertsson heter kvinnan som kommer att följa med oss en stor del av dagen. Lena arbetar som fotograf och kommer ansvara för att föreviga bröllopsdagen i bilder (eftersom brudgummen själv inte kan göra det, nu när han ska vara med på bilderna). Lena är smidig, snabb, duktig och jättetrevlig. Hon kommer garanterat att få alla att fastna på bild, utan att det känns obekvämt. 
+          <img src="images/Lena.jpg" alt="Lena" style="width:100%;height:100%;">
+        </p>
+        <p>
+        Lena Evertsson heter kvinnan som kommer att följa med oss en stor del av dagen. Lena arbetar som fotograf och kommer ansvara för att föreviga bröllopsdagen i bilder (eftersom brudgummen själv inte kan göra det, nu när han ska vara med på bilderna). Hon kommer garanterat att få alla att fastna på bild, utan att det känns obekvämt. 
         <a target="_blank" href="http://www.ateljelena.se/">Läs mer om Lena</a> 
         </p>
         <br>
