Added and updated info about toast madamer

--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -96,7 +96,7 @@
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <h2>Toastmaster Pernilla</h2>
+        <h2>Toastmadame Pernilla</h2>
         <br>
         <p><b>Telefonummer:</b></p>
         <p>0736-494886</p>
@@ -104,10 +104,10 @@
         <p>toast.angelholmsbrollop@gmail.com</p>
       </div>
       <div class="col-sm-4">
-        <h2>Toastmaster 2</h2>
+        <h2>Toastmadame Linda</h2>
         <br>
         <p><b>Telefonnummer:</b></p> 
-        <p>xxxx-xxxxxxx</p>
+        <p>0721-937229</p>
         <p><b>E-post:</b></p>
         <p>toast.angelholmsbrollop@gmail.com</p>
       </div>
