--- a/public/templates/party.html
+++ b/public/templates/party.html
@@ -92,30 +92,22 @@ function setMarkers(map) {
 	           <p>Vi kommer att ordna med gemensam transfer från kyrkan till festlokalen för de som önskar det. Vänligen ange om ni önskar transfer när ni anmäler er.
                </p>        
             </div>
-        </div>    
+        </div>
+        <br>
+        <br>
         <div class="row">        
             <div class="col-sm-4">
-                <h2>Toastmaster Pernilla</h2>
+                <h2>Toastmadamer</h2>
                 <p>
-                    Den som ska hålla i trådarna under festen är Pernilla Jacobsson Riaz. Pernillas kontaktuppgifter hittar ni <a data-ui-sref="home.contact">här</a>
+                  <img src="images/PernillaLinda.jpg" alt="PernillaLinda" style="width:100%;height:100%;">
                 </p>
-            </div>
-            <div class="col-sm-4">
-                <h2>Toastmaster XXX</h2>
                 <p>
-                Här kommer komma information om vem som kommer vara toastmaster nr 2
+                  Pernilla och Linda heter kvällens två glada toastmadamer. De kommer att hålla i trådarna under festen. Känner ni för att hålla ett tal, hitta på ett spex, sjunga en sång, leda en lek eller något annat kul, blir de tacksamma om ni anmäler detta i förväg till dem. Allt för att planeringen av middagen ska gå så smidigt som möjligt. Deras kontaktuppgifter hittar ni <a data-ui-sref="home.contact">här</a>
                 </p>
             </div>
             <div class="col-sm-4">
                 <h2>Barn</h2>
                 <p>Vuxna barn är välkomna på vårt bröllop men vi önskar att barn under 10 år stannar hemma.</p>        
-             </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-	         <h2>Present</h2>
-	           <p>Den bästa present vi kan få är att ni vill komma och dela dagen med oss. Vill ni ge oss en gåva, tar vi tacksamt emot ett bidrag till vår bröllopsresa.
-             </p>        
             </div>
             <div class="col-sm-4">
               <h2>Fotohörna</h2>
@@ -125,6 +117,14 @@ function setMarkers(map) {
                 <img src="images/photocorner.jpg" alt="Fotohörna" style="width:100%;height:100%;">
               </p>
             </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+          <div class="col-sm-4">
+	         <h2>Present</h2>
+	           <p>Den bästa present vi kan få är att ni vill komma och dela dagen med oss. Vill ni ge oss en gåva, tar vi tacksamt emot ett bidrag till vår bröllopsresa.
+             </p>
         </div>
     </div> <!-- /container -->
 </div>
