Added new texts on start page and church page

--- a/public/templates/startpage.html
+++ b/public/templates/startpage.html
@@ -19,8 +19,10 @@
         <p>Det finns många sätt att ta sig till Ängelholm på. Det går att komma hit med buss, bil, tåg eller flyg. Ängelholm ligger längs med E6:an och har goda tågkommunikationer. Ängelholms Kyrka ligger i centrala Ängelholm, på gångavstånd från stationen. Flygplatsen ligger lite utanför staden. Flygalternativet passar bäst för de som reser från Stockholmstrakten. Flygbuss, taxi och hyrbil finns tillgängligt.
       </div>
       <div class="col-sm-4">
-        <h2>Om oss</h2>
-        <p>Det har nu gått 10 år sen vi först träffade varann på den korridor som vi båda bodde på. Helt plötsligt försökte man tillbringa så mycket tid som möjligt i korridorens kök eller allrum ihopp om att den andre skulle vara där. Så nu tio år senare tyckte vi att det var dags att äntligen göra slag i saken och säga Ja till varandra i närvaro av våra vänner och bekanta</p>
+        <h2>Vägarbete</h2>
+        <p>På E6:an utanför Ängelholm pågår ett stort vägarbete som kan medföra köer. Vägarbetet är precis vid Trafikplats Rebbelberga och avfart 35. För att undvika detta kan ni som kommer söderifrån köra av vid avfart 34, Höja, istället. Kör in mot Ängelholms centrum och följ sedan skyltar mot flygplatsen eller Hjärnarp. 
+
+Ni som kommer norrifrån kör av E6:an vid Hjärnarp där det står skyltat Margretetorp, och kommer på så vis undvika vägarbetet.</p>
        </div>
     </div>
     <br>
@@ -41,9 +43,9 @@
         </p>
       </div>
       <div class="col-sm-4">
-        <h2></h2>
-        <p>
-      </div>
+        <h2>Om oss</h2>
+        <p>Det har nu gått 10 år sen vi först träffade varann på den korridor som vi båda bodde på. Helt plötsligt försökte man tillbringa så mycket tid som möjligt i korridorens kök eller allrum ihopp om att den andre skulle vara där. Så nu tio år senare tyckte vi att det var dags att äntligen göra slag i saken och säga Ja till varandra i närvaro av våra vänner och bekanta</p>
+       </div>
       <div class="col-sm-4">
         <h2></h2>
         <p></p>
